--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # .env
-DISCORD_TOKEN=Nzg1NDEyMzc3MzI3MTczNjM4.X83eRw.OE6QXoIRsgIHvziB_LKmbPlhsus
+DISCORD_TOKEN="Nzg1NDEyMzc3MzI3MTczNjM4.X83eRw.OE6QXoIRsgIHvziB_LKmbPlhsus"
